crates/nash-can/src/snapshots/nash_can__module__tests__to_public_alias_public_passes_through.snap
---
source: crates/nash-can/src/module.rs
expression: alias.to_public()
---
Some(
    InterfaceAlias {
        name: "Pair",
        parameters: [
            "a",
            "b",
        ],
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Unit,
        },
        visibility: Public,
    },
)
