crates/nash-can/src/snapshots/nash_can__module__tests__unbound_record_ext_var_in_alias.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Bad = { r | items : List r }\n"
---
[
    TypeVarsMessedUpInAlias {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
        name: "Bad",
        args: [],
        unused: [],
        unbound: [
            (
                "r",
                Region {
                    start: Position {
                        line: 3,
                        column: 37,
                    },
                    end: Position {
                        line: 3,
                        column: 38,
                    },
                },
            ),
        ],
    },
]
