crates/nash-can/src/snapshots/nash_can__module__tests__unbound_record_ext_var_in_union.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype Foo = Bar { r | items : List r }\n"
---
[
    TypeVarsUnboundInUnion {
        region: Region {
            start: Position {
                line: 3,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
        name: "Foo",
        args: [],
        unbound: (
            "r",
            Region {
                start: Position {
                    line: 3,
                    column: 35,
                },
                end: Position {
                    line: 3,
                    column: 36,
                },
            },
        ),
        more_unbound: [],
    },
]
